test/corpus/test_part2.txt
===========================================================
parameter direction
===========================================================

fun: (forward s1 : std::string, inout s2 : std::string, move s3 : std::string) = {
    std::cout << s1 << s2 << s3 << std::endl;
}

main: (in a := 10, copy c: _, out b : int = 0.001) = {
    b : std::string = "b";
    c : std::string = "c";
    fun(std::string("a"), b, c);
    b = "";
}

-----------------------------------------------------------

(source_file
  (declaration
    (block_declaration
      (non_template_identifier)
      (block_definition
        (left_side_of_definition
          (type
            (function_type
              (function_type_without_return_type
                (comma_seperated_declarations
                  (function_declaration_argument
                    (passing_style)
                    (declaration
                      (no_definition_declaration
                        (non_template_identifier)
                        (type
                          (expression
                            (any_identifier
                              (namespaced_identifier
                                (no_namespace_identifier
                                  (non_template_identifier))
                                (no_namespace_identifier
                                  (non_template_identifier)))))))))
                  (function_declaration_argument
                    (passing_style)
                    (declaration
                      (no_definition_declaration
                        (non_template_identifier)
                        (type
                          (expression
                            (any_identifier
                              (namespaced_identifier
                                (no_namespace_identifier
                                  (non_template_identifier))
                                (no_namespace_identifier
                                  (non_template_identifier)))))))))
                  (function_declaration_argument
                    (passing_style)
                    (declaration
                      (no_definition_declaration
                        (non_template_identifier)
                        (type
                          (expression
                            (any_identifier
                              (namespaced_identifier
                                (no_namespace_identifier
                                  (non_template_identifier))
                                (no_namespace_identifier
                                  (non_template_identifier))))))))))))))
        (block
          (statement
            (non_block_statement
              (expression
                (binary_expression
                  (expression
                    (any_identifier
                      (namespaced_identifier
                        (no_namespace_identifier
                          (non_template_identifier))
                        (no_namespace_identifier
                          (non_template_identifier)))))
                  (expression
                    (binary_expression
                      (expression
                        (any_identifier
                          (no_namespace_identifier
                            (non_template_identifier))))
                      (expression
                        (binary_expression
                          (expression
                            (any_identifier
                              (no_namespace_identifier
                                (non_template_identifier))))
                          (expression
                            (binary_expression
                              (expression
                                (any_identifier
                                  (no_namespace_identifier
                                    (non_template_identifier))))
                              (expression
                                (any_identifier
                                  (namespaced_identifier
                                    (no_namespace_identifier
                                      (non_template_identifier))
                                    (no_namespace_identifier
                                      (non_template_identifier)))))))))))))))))))
  (declaration
    (block_declaration
      (non_template_identifier)
      (block_definition
        (left_side_of_definition
          (type
            (function_type
              (function_type_without_return_type
                (comma_seperated_declarations
                  (function_declaration_argument
                    (passing_style)
                    (declaration
                      (expression_declaration
                        (non_template_identifier)
                        (expression_definition
                          (left_side_of_definition)
                          (expression
                            (literal
                              (number)))))))
                  (function_declaration_argument
                    (passing_style)
                    (declaration
                      (no_definition_declaration
                        (non_template_identifier)
                        (type
                          (expression
                            (any_identifier
                              (no_namespace_identifier
                                (non_template_identifier))))))))
                  (function_declaration_argument
                    (passing_style)
                    (declaration
                      (expression_declaration
                        (non_template_identifier)
                        (expression_definition
                          (left_side_of_definition
                            (type
                              (expression
                                (any_identifier
                                  (no_namespace_identifier
                                    (non_template_identifier))))))
                          (expression
                            (literal
                              (float))))))))))))
        (block
          (statement
            (non_block_statement
              (declaration
                (expression_declaration
                  (non_template_identifier)
                  (expression_definition
                    (left_side_of_definition
                      (type
                        (expression
                          (any_identifier
                            (namespaced_identifier
                              (no_namespace_identifier
                                (non_template_identifier))
                              (no_namespace_identifier
                                (non_template_identifier)))))))
                    (expression
                      (literal
                        (string))))))))
          (statement
            (non_block_statement
              (declaration
                (expression_declaration
                  (non_template_identifier)
                  (expression_definition
                    (left_side_of_definition
                      (type
                        (expression
                          (any_identifier
                            (namespaced_identifier
                              (no_namespace_identifier
                                (non_template_identifier))
                              (no_namespace_identifier
                                (non_template_identifier)))))))
                    (expression
                      (literal
                        (string))))))))
          (statement
            (non_block_statement
              (expression
                (function_call
                  (expression
                    (any_identifier
                      (no_namespace_identifier
                        (non_template_identifier))))
                  (parentheses_expression
                    (expression_or_comma_expressions
                      (comma_expressions
                        (expression
                          (function_call
                            (expression
                              (any_identifier
                                (namespaced_identifier
                                  (no_namespace_identifier
                                    (non_template_identifier))
                                  (no_namespace_identifier
                                    (non_template_identifier)))))
                            (parentheses_expression
                              (expression_or_comma_expressions
                                (expression
                                  (literal
                                    (string)))))))
                        (expression_or_comma_expressions
                          (comma_expressions
                            (expression
                              (any_identifier
                                (no_namespace_identifier
                                  (non_template_identifier))))
                            (expression_or_comma_expressions
                              (expression
                                (any_identifier
                                  (no_namespace_identifier
                                    (non_template_identifier))))))))))))))
          (statement
            (non_block_statement
              (expression
                (binary_expression
                  (expression
                    (any_identifier
                      (no_namespace_identifier
                        (non_template_identifier))))
                  (expression
                    (literal
                      (string))))))))))))

===========================================================
function type ids
===========================================================

f: () = std::cout << "hello world!\n";
g_in   : (      s: std::string) = std::cout << "Come in, (s)$\n";
g_inout: (inout s: std::string) = std::cout << "Come in awhile, but take some biscuits on your way out, (s)$!\n";
g_out  : (out   s: std::string) = s = "A Powerful Mage";
g_move : (move  s: std::string) = std::cout << "I hear you've moving, (s)$?\n";

h_forward: (inout s: std::string) -> forward std::string = { std::cout << "Inout (s)$ ... "; return s; }

-----------------------------------------------------------

(source_file
  (declaration
    (expression_declaration
      (non_template_identifier)
      (expression_definition
        (left_side_of_definition
          (type
            (function_type
              (function_type_without_return_type))))
        (expression
          (binary_expression
            (expression
              (any_identifier
                (namespaced_identifier
                  (no_namespace_identifier
                    (non_template_identifier))
                  (no_namespace_identifier
                    (non_template_identifier)))))
            (expression
              (literal
                (string))))))))
  (declaration
    (expression_declaration
      (non_template_identifier)
      (expression_definition
        (left_side_of_definition
          (type
            (function_type
              (function_type_without_return_type
                (comma_seperated_declarations
                  (function_declaration_argument
                    (declaration
                      (no_definition_declaration
                        (non_template_identifier)
                        (type
                          (expression
                            (any_identifier
                              (namespaced_identifier
                                (no_namespace_identifier
                                  (non_template_identifier))
                                (no_namespace_identifier
                                  (non_template_identifier))))))))))))))
        (expression
          (binary_expression
            (expression
              (any_identifier
                (namespaced_identifier
                  (no_namespace_identifier
                    (non_template_identifier))
                  (no_namespace_identifier
                    (non_template_identifier)))))
            (expression
              (literal
                (string))))))))
  (declaration
    (expression_declaration
      (non_template_identifier)
      (expression_definition
        (left_side_of_definition
          (type
            (function_type
              (function_type_without_return_type
                (comma_seperated_declarations
                  (function_declaration_argument
                    (passing_style)
                    (declaration
                      (no_definition_declaration
                        (non_template_identifier)
                        (type
                          (expression
                            (any_identifier
                              (namespaced_identifier
                                (no_namespace_identifier
                                  (non_template_identifier))
                                (no_namespace_identifier
                                  (non_template_identifier))))))))))))))
        (expression
          (binary_expression
            (expression
              (any_identifier
                (namespaced_identifier
                  (no_namespace_identifier
                    (non_template_identifier))
                  (no_namespace_identifier
                    (non_template_identifier)))))
            (expression
              (literal
                (string))))))))
  (declaration
    (expression_declaration
      (non_template_identifier)
      (expression_definition
        (left_side_of_definition
          (type
            (function_type
              (function_type_without_return_type
                (comma_seperated_declarations
                  (function_declaration_argument
                    (passing_style)
                    (declaration
                      (no_definition_declaration
                        (non_template_identifier)
                        (type
                          (expression
                            (any_identifier
                              (namespaced_identifier
                                (no_namespace_identifier
                                  (non_template_identifier))
                                (no_namespace_identifier
                                  (non_template_identifier))))))))))))))
        (expression
          (binary_expression
            (expression
              (any_identifier
                (no_namespace_identifier
                  (non_template_identifier))))
            (expression
              (literal
                (string))))))))
  (declaration
    (expression_declaration
      (non_template_identifier)
      (expression_definition
        (left_side_of_definition
          (type
            (function_type
              (function_type_without_return_type
                (comma_seperated_declarations
                  (function_declaration_argument
                    (passing_style)
                    (declaration
                      (no_definition_declaration
                        (non_template_identifier)
                        (type
                          (expression
                            (any_identifier
                              (namespaced_identifier
                                (no_namespace_identifier
                                  (non_template_identifier))
                                (no_namespace_identifier
                                  (non_template_identifier))))))))))))))
        (expression
          (binary_expression
            (expression
              (any_identifier
                (namespaced_identifier
                  (no_namespace_identifier
                    (non_template_identifier))
                  (no_namespace_identifier
                    (non_template_identifier)))))
            (expression
              (literal
                (string))))))))
  (declaration
    (block_declaration
      (non_template_identifier)
      (block_definition
        (left_side_of_definition
          (type
            (function_type
              (function_type_without_return_type
                (comma_seperated_declarations
                  (function_declaration_argument
                    (passing_style)
                    (declaration
                      (no_definition_declaration
                        (non_template_identifier)
                        (type
                          (expression
                            (any_identifier
                              (namespaced_identifier
                                (no_namespace_identifier
                                  (non_template_identifier))
                                (no_namespace_identifier
                                  (non_template_identifier)))))))))))
              (passing_style)
              (type
                (expression
                  (any_identifier
                    (namespaced_identifier
                      (no_namespace_identifier
                        (non_template_identifier))
                      (no_namespace_identifier
                        (non_template_identifier)))))))))
        (block
          (statement
            (non_block_statement
              (expression
                (binary_expression
                  (expression
                    (any_identifier
                      (namespaced_identifier
                        (no_namespace_identifier
                          (non_template_identifier))
                        (no_namespace_identifier
                          (non_template_identifier)))))
                  (expression
                    (literal
                      (string)))))))
          (statement
            (non_block_statement
              (return_statement
                (expression
                  (any_identifier
                    (no_namespace_identifier
                      (non_template_identifier))))))))))))

===========================================================
templates
===========================================================

do_stuff: <a: int, A: type> (b: A) = {
   std::cout << a << b << std::endl;
}

TypeStuff: <a: int, A: type> type = {
    x: std::string;
}

TypeStuff: @hello1 @cpp::is::cool@and_this <a: int, A: type> type = {
    x: std::string;
}

-----------------------------------------------------------

(source_file
  (declaration
    (block_declaration
      (non_template_identifier)
      (block_definition
        (left_side_of_definition
          (template_declaration_arguments
            (comma_seperated_declarations
              (function_declaration_argument
                (declaration
                  (no_definition_declaration
                    (non_template_identifier)
                    (type
                      (expression
                        (any_identifier
                          (no_namespace_identifier
                            (non_template_identifier))))))))
              (function_declaration_argument
                (declaration
                  (no_definition_declaration
                    (non_template_identifier)
                    (type
                      (type_type))))))
            (template_close_token))
          (type
            (function_type
              (function_type_without_return_type
                (comma_seperated_declarations
                  (function_declaration_argument
                    (declaration
                      (no_definition_declaration
                        (non_template_identifier)
                        (type
                          (expression
                            (any_identifier
                              (no_namespace_identifier
                                (non_template_identifier)))))))))))))
        (block
          (statement
            (non_block_statement
              (expression
                (binary_expression
                  (expression
                    (any_identifier
                      (namespaced_identifier
                        (no_namespace_identifier
                          (non_template_identifier))
                        (no_namespace_identifier
                          (non_template_identifier)))))
                  (expression
                    (binary_expression
                      (expression
                        (any_identifier
                          (no_namespace_identifier
                            (non_template_identifier))))
                      (expression
                        (binary_expression
                          (expression
                            (any_identifier
                              (no_namespace_identifier
                                (non_template_identifier))))
                          (expression
                            (any_identifier
                              (namespaced_identifier
                                (no_namespace_identifier
                                  (non_template_identifier))
                                (no_namespace_identifier
                                  (non_template_identifier)))))))))))))))))
  (declaration
    (block_declaration
      (non_template_identifier)
      (block_definition
        (left_side_of_definition
          (template_declaration_arguments
            (comma_seperated_declarations
              (function_declaration_argument
                (declaration
                  (no_definition_declaration
                    (non_template_identifier)
                    (type
                      (expression
                        (any_identifier
                          (no_namespace_identifier
                            (non_template_identifier))))))))
              (function_declaration_argument
                (declaration
                  (no_definition_declaration
                    (non_template_identifier)
                    (type
                      (type_type))))))
            (template_close_token))
          (type
            (type_type)))
        (block
          (statement
            (non_block_statement
              (declaration
                (no_definition_declaration
                  (non_template_identifier)
                  (type
                    (expression
                      (any_identifier
                        (namespaced_identifier
                          (no_namespace_identifier
                            (non_template_identifier))
                          (no_namespace_identifier
                            (non_template_identifier))))))))))))))
  (declaration
    (block_declaration
      (non_template_identifier)
      (block_definition
        (left_side_of_definition
          (metafunction_arguments
            (any_identifier
              (no_namespace_identifier
                (non_template_identifier)))
            (any_identifier
              (namespaced_identifier
                (no_namespace_identifier
                  (non_template_identifier))
                (no_namespace_identifier
                  (non_template_identifier))
                (no_namespace_identifier
                  (non_template_identifier))))
            (any_identifier
              (no_namespace_identifier
                (non_template_identifier))))
          (template_declaration_arguments
            (comma_seperated_declarations
              (function_declaration_argument
                (declaration
                  (no_definition_declaration
                    (non_template_identifier)
                    (type
                      (expression
                        (any_identifier
                          (no_namespace_identifier
                            (non_template_identifier))))))))
              (function_declaration_argument
                (declaration
                  (no_definition_declaration
                    (non_template_identifier)
                    (type
                      (type_type))))))
            (template_close_token))
          (type
            (type_type)))
        (block
          (statement
            (non_block_statement
              (declaration
                (no_definition_declaration
                  (non_template_identifier)
                  (type
                    (expression
                      (any_identifier
                        (namespaced_identifier
                          (no_namespace_identifier
                            (non_template_identifier))
                          (no_namespace_identifier
                            (non_template_identifier)))))))))))))))

===========================================================
calling templates
===========================================================

main: () = {
    a := b < c;
    a := b > c;
    a := b < c > d;
    a := hello<a>;
}

-----------------------------------------------------------

(source_file
  (declaration
    (block_declaration
      (non_template_identifier)
      (block_definition
        (left_side_of_definition
          (type
            (function_type
              (function_type_without_return_type))))
        (block
          (statement
            (non_block_statement
              (declaration
                (expression_declaration
                  (non_template_identifier)
                  (expression_definition
                    (left_side_of_definition)
                    (expression
                      (binary_expression
                        (expression
                          (any_identifier
                            (no_namespace_identifier
                              (non_template_identifier))))
                        (expression
                          (any_identifier
                            (no_namespace_identifier
                              (non_template_identifier)))))))))))
          (statement
            (non_block_statement
              (declaration
                (expression_declaration
                  (non_template_identifier)
                  (expression_definition
                    (left_side_of_definition)
                    (expression
                      (binary_expression
                        (expression
                          (any_identifier
                            (no_namespace_identifier
                              (non_template_identifier))))
                        (expression
                          (any_identifier
                            (no_namespace_identifier
                              (non_template_identifier)))))))))))
          (statement
            (non_block_statement
              (declaration
                (expression_declaration
                  (non_template_identifier)
                  (expression_definition
                    (left_side_of_definition)
                    (expression
                      (binary_expression
                        (expression
                          (binary_expression
                            (expression
                              (any_identifier
                                (no_namespace_identifier
                                  (non_template_identifier))))
                            (expression
                              (any_identifier
                                (no_namespace_identifier
                                  (non_template_identifier))))))
                        (expression
                          (any_identifier
                            (no_namespace_identifier
                              (non_template_identifier)))))))))))
          (statement
            (non_block_statement
              (declaration
                (expression_declaration
                  (non_template_identifier)
                  (expression_definition
                    (left_side_of_definition)
                    (expression
                      (any_identifier
                        (no_namespace_identifier
                          (template_identifier
                            (non_template_identifier)
                            (template_call_arguments
                              (expression_or_comma_expressions
                                (expression
                                  (any_identifier
                                    (no_namespace_identifier
                                      (non_template_identifier)))))
                              (template_close_token))))))))))))))))

===========================================================
more calling templates
===========================================================
a := hello<b, c>;

-----------------------------------------------------------

(source_file
  (declaration
    (expression_declaration
      (non_template_identifier)
      (expression_definition
        (left_side_of_definition)
        (expression
          (any_identifier
            (no_namespace_identifier
              (template_identifier
                (non_template_identifier)
                (template_call_arguments
                  (expression_or_comma_expressions
                    (comma_expressions
                      (expression
                        (any_identifier
                          (no_namespace_identifier
                            (non_template_identifier))))
                      (expression_or_comma_expressions
                        (expression
                          (any_identifier
                            (no_namespace_identifier
                              (non_template_identifier)))))))
                  (template_close_token))))))))))

===========================================================
binary op order
===========================================================
a := a * b + c;
g := f += d /= a + b * c;

-----------------------------------------------------------

(source_file
  (declaration
    (expression_declaration
      (non_template_identifier)
      (expression_definition
        (left_side_of_definition)
        (expression
          (binary_expression
            (expression
              (binary_expression
                (expression
                  (any_identifier
                    (no_namespace_identifier
                      (non_template_identifier))))
                (expression
                  (any_identifier
                    (no_namespace_identifier
                      (non_template_identifier))))))
            (expression
              (any_identifier
                (no_namespace_identifier
                  (non_template_identifier)))))))))
  (declaration
    (expression_declaration
      (non_template_identifier)
      (expression_definition
        (left_side_of_definition)
        (expression
          (binary_expression
            (expression
              (any_identifier
                (no_namespace_identifier
                  (non_template_identifier))))
            (expression
              (binary_expression
                (expression
                  (any_identifier
                    (no_namespace_identifier
                      (non_template_identifier))))
                (expression
                  (binary_expression
                    (expression
                      (any_identifier
                        (no_namespace_identifier
                          (non_template_identifier))))
                    (expression
                      (binary_expression
                        (expression
                          (any_identifier
                            (no_namespace_identifier
                              (non_template_identifier))))
                        (expression
                          (any_identifier
                            (no_namespace_identifier
                              (non_template_identifier))))))))))))))))

===========================================================
even more template calling
===========================================================

a := hello<a> < hello<a>;
a := hello<a> < hello<a> > hello<a>;
a := hello<a>(hello);
a : <T: type, i: int> = hello<a, c, d, T>(hello, i);
a: <T: type, i: int> = hello<a<T>, c<a, (d>b), T>(hello, i);
a: <T: type, i: int> Something<"what", what> = hello<a<T>, c<a, (d>b), T>(hello, i);



-----------------------------------------------------------

(source_file
  (declaration
    (expression_declaration
      (non_template_identifier)
      (expression_definition
        (left_side_of_definition)
        (expression
          (binary_expression
            (expression
              (any_identifier
                (no_namespace_identifier
                  (template_identifier
                    (non_template_identifier)
                    (template_call_arguments
                      (expression_or_comma_expressions
                        (expression
                          (any_identifier
                            (no_namespace_identifier
                              (non_template_identifier)))))
                      (template_close_token))))))
            (expression
              (any_identifier
                (no_namespace_identifier
                  (template_identifier
                    (non_template_identifier)
                    (template_call_arguments
                      (expression_or_comma_expressions
                        (expression
                          (any_identifier
                            (no_namespace_identifier
                              (non_template_identifier)))))
                      (template_close_token)))))))))))
  (declaration
    (expression_declaration
      (non_template_identifier)
      (expression_definition
        (left_side_of_definition)
        (expression
          (binary_expression
            (expression
              (binary_expression
                (expression
                  (any_identifier
                    (no_namespace_identifier
                      (template_identifier
                        (non_template_identifier)
                        (template_call_arguments
                          (expression_or_comma_expressions
                            (expression
                              (any_identifier
                                (no_namespace_identifier
                                  (non_template_identifier)))))
                          (template_close_token))))))
                (expression
                  (any_identifier
                    (no_namespace_identifier
                      (template_identifier
                        (non_template_identifier)
                        (template_call_arguments
                          (expression_or_comma_expressions
                            (expression
                              (any_identifier
                                (no_namespace_identifier
                                  (non_template_identifier)))))
                          (template_close_token))))))))
            (expression
              (any_identifier
                (no_namespace_identifier
                  (template_identifier
                    (non_template_identifier)
                    (template_call_arguments
                      (expression_or_comma_expressions
                        (expression
                          (any_identifier
                            (no_namespace_identifier
                              (non_template_identifier)))))
                      (template_close_token)))))))))))
  (declaration
    (expression_declaration
      (non_template_identifier)
      (expression_definition
        (left_side_of_definition)
        (expression
          (function_call
            (expression
              (any_identifier
                (no_namespace_identifier
                  (template_identifier
                    (non_template_identifier)
                    (template_call_arguments
                      (expression_or_comma_expressions
                        (expression
                          (any_identifier
                            (no_namespace_identifier
                              (non_template_identifier)))))
                      (template_close_token))))))
            (parentheses_expression
              (expression_or_comma_expressions
                (expression
                  (any_identifier
                    (no_namespace_identifier
                      (non_template_identifier)))))))))))
  (declaration
    (expression_declaration
      (non_template_identifier)
      (expression_definition
        (left_side_of_definition
          (template_declaration_arguments
            (comma_seperated_declarations
              (function_declaration_argument
                (declaration
                  (no_definition_declaration
                    (non_template_identifier)
                    (type
                      (type_type)))))
              (function_declaration_argument
                (declaration
                  (no_definition_declaration
                    (non_template_identifier)
                    (type
                      (expression
                        (any_identifier
                          (no_namespace_identifier
                            (non_template_identifier)))))))))
            (template_close_token)))
        (expression
          (function_call
            (expression
              (any_identifier
                (no_namespace_identifier
                  (template_identifier
                    (non_template_identifier)
                    (template_call_arguments
                      (expression_or_comma_expressions
                        (comma_expressions
                          (expression
                            (any_identifier
                              (no_namespace_identifier
                                (non_template_identifier))))
                          (expression_or_comma_expressions
                            (comma_expressions
                              (expression
                                (any_identifier
                                  (no_namespace_identifier
                                    (non_template_identifier))))
                              (expression_or_comma_expressions
                                (comma_expressions
                                  (expression
                                    (any_identifier
                                      (no_namespace_identifier
                                        (non_template_identifier))))
                                  (expression_or_comma_expressions
                                    (expression
                                      (any_identifier
                                        (no_namespace_identifier
                                          (non_template_identifier)))))))))))
                      (template_close_token))))))
            (parentheses_expression
              (expression_or_comma_expressions
                (comma_expressions
                  (expression
                    (any_identifier
                      (no_namespace_identifier
                        (non_template_identifier))))
                  (expression_or_comma_expressions
                    (expression
                      (any_identifier
                        (no_namespace_identifier
                          (non_template_identifier)))))))))))))
  (declaration
    (expression_declaration
      (non_template_identifier)
      (expression_definition
        (left_side_of_definition
          (template_declaration_arguments
            (comma_seperated_declarations
              (function_declaration_argument
                (declaration
                  (no_definition_declaration
                    (non_template_identifier)
                    (type
                      (type_type)))))
              (function_declaration_argument
                (declaration
                  (no_definition_declaration
                    (non_template_identifier)
                    (type
                      (expression
                        (any_identifier
                          (no_namespace_identifier
                            (non_template_identifier)))))))))
            (template_close_token)))
        (expression
          (function_call
            (expression
              (any_identifier
                (no_namespace_identifier
                  (template_identifier
                    (non_template_identifier)
                    (template_call_arguments
                      (expression_or_comma_expressions
                        (comma_expressions
                          (expression
                            (any_identifier
                              (no_namespace_identifier
                                (template_identifier
                                  (non_template_identifier)
                                  (template_call_arguments
                                    (expression_or_comma_expressions
